# pano_exploration

./: .gitmodules  CMakeLists.txt  README.md  package.xml
action/: Panorama.action
csqmi_exploration/: CMakeLists.txt  package.xml
csqmi_exploration/include/csqmi_exploration/: exploration_manager.h
csqmi_exploration/launch/: host.launch  image_collection.launch  range_data_collection_robot.launch  scarab.launch
csqmi_exploration/msg/: PanGoal.msg
csqmi_exploration/rviz/: 1robot.rviz  2robot.rviz  move_base.rviz  relative_transform_test.rviz
csqmi_exploration/src/: exploration_manager.cpp  exploration_manager_node.cpp  heartbeat_pub.cpp  image_collection.cpp
csqmi_exploration/srv/: InitRelLocalization.srv
csqmi_planning/: .gitignore  CMakeLists.txt  dump_map.m
csqmi_planning/include/csqmi_planning/: csqmi.h  csqmi_planning.h
csqmi_planning/src/: csqmi.cpp  main.cpp  thinning.cpp
grid_mapping/: CMakeLists.txt
grid_mapping/include/grid_mapping/: common.h  grid_base.h
grid_mapping/launch/: angle_grid_nodelet.launch
grid_mapping/src/: common.cpp  grid_base.cpp  occ_grid_test.cpp  pixel_density_grid_test.cpp  point.cpp  transform_grid_test.cpp
include/csqmi_exploration/: exploration_manager.h
include/csqmi_planning/: common.h  csqmi.h  partitioning.h  thinning.hpp
include/grid_mapping/: angle_grid.h  angle_grid_nodelet.h  common.h  grid_base.h  occ_grid.h  pixel_density_grid.h  point.h
include/panorama/: Panorama.h  PanoramaNodelet.h  convert.hpp  panorama.h  panorama_nodelet.h
launch/: action_client_cli.launch  host.launch  live_test.launch  mast.launch  panorama_collection.launch  panorama_node.launch  panorama_nodelet.launch  range_data_collection_host.launch  robot.launch  scarab.launch  test.launch  waypoint_nav_node.launch
msg/: OccupancyGrid.msg
panorama/: CMakeLists.txt  package.xml
panorama/include/panorama/: panorama.h
panorama/launch/: action_client_cli.launch  panorama_collection.launch  panorama_node.launch  panorama_nodelet.launch
panorama/plugin/: panorama_nodelet.xml
panorama/src/: panorama.cpp  panorama_action_client.cpp  panorama_node.cpp  show_panorama.cpp
plugin/: angle_grid_nodelet.xml
rviz/: 1robot.rviz
src/: Panorama.cpp  PanoramaActionClient.cpp  PanoramaNode.cpp  PanoramaNodelet.cpp  angle_grid.cpp  angle_grid_nodelet.cpp  angle_grid_test.cpp  common.cpp  csqmi.cpp  exploration_manager.cpp  grid_base.cpp  init_relative_localization.cpp  main.cpp  occ_grid.cpp  panorama.cpp  panorama_action_client.cpp  panorama_cli.cpp  panorama_node.cpp  panorama_nodelet.cpp  partitioning.cpp  pcl_visualization_test.cpp  pixel_density_grid.cpp  pruning.cpp  show_panorama.cpp  thinning.cpp
