<?xml version="1.0"?>
<package format="2">
  <name>grid_mapping</name>
  <version>0.0.0</version>
  <description>The grid_mapping package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/plugin/angle_grid_nodelet.xml"/>
  </export>
</package>
